fixed collapse all templates

--- a/src/app/modules/templates/template-list/template-list.component.scss
+++ b/src/app/modules/templates/template-list/template-list.component.scss
@@ -83,7 +83,7 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    right: 26em;
+    right: 25em;
     top: 2em;
   }
 
@@ -621,7 +621,8 @@
 
   .progress-section {
     position: relative;
-    right: 0;
+    // right: 0;
+    left: 3em;
     display: flex;
     align-items: center;
   }
