--- a/src/app/modules/workflows/wave-list/wave-list.component.scss
+++ b/src/app/modules/workflows/wave-list/wave-list.component.scss
@@ -104,7 +104,7 @@
   .stage-btn {
     bottom: -5px;
     position: absolute;
-    left: 22em;
+    left: 23em;
   }
 
   .template__row {
@@ -638,7 +638,7 @@
   .stage-option {
     bottom: 2em;
     position: relative;
-    right: 12px;
+    right: 0;
   }
 
   .row-items {
